force-app/main/default/objects/Food_Production_Submission__c/Food_Production_Submission__c.object-meta.xml
<CustomObject>
    <label>Food Production Submission</label>
    <nameField>
        <displayFormat>FPS-{000000}</displayFormat>
        <label>Food Production Submission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food Production Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>