force-app/main/default/objects/Food_Production_Submission__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <label>Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>