force-app/main/default/objects/Food_Production_Submission__c/fields/Farm__c.field-meta.xml
<CustomField>
    <fullName>Farm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farm</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Food_Production</relationshipName>
    <type>Lookup</type>
</CustomField>