force-app/main/default/objects/Food_Production_Submission__c/fields/Farm_Name__c.field-meta.xml
<CustomField>
    <fullName>Farm_Name__c</fullName>
    <label>Farm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>