force-app/main/default/objects/Food_Production_Submission__c/fields/Number_of_Notifications_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Notifications_Sent__c</fullName>
    <label>Number of Notifications Sent</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>