force-app/main/default/objects/Food_Production_Submission__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <formula>DATE( VALUE(Year_of_Sale__c),VALUE(CASE(Sale_Period__c , &apos;q1&apos;, &apos;1&apos;, &apos;q2&apos;, &apos;4&apos;,&apos;q3&apos;,&apos;7&apos;, &apos;10&apos;) ),1)</formula>
    <label>Reporting Period</label>
    <type>Date</type>
</CustomField>