force-app/main/default/objects/Food_Production_Submission__c/fields/Require_Attention__c.field-meta.xml
<CustomField>
    <fullName>Require_Attention__c</fullName>
    <formula>if( Attention_Details__c &lt;&gt; &quot;&quot;, &quot;⚠️&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Require Attention</label>
    <type>Text</type>
</CustomField>