force-app/main/default/objects/Food_Production_Submission__c/fields/Sale_Period__c.field-meta.xml
<CustomField>
    <fullName>Sale_Period__c</fullName>
    <label>Sale Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>q1</fullName>
                <label>Jan-Mar 一月至三月</label>
            </value>
            <value>
                <fullName>q2</fullName>
                <label>Apr-Jun 四月至六月</label>
            </value>
            <value>
                <fullName>q3</fullName>
                <label>July-Sep 七月至九月</label>
            </value>
            <value>
                <fullName>q4</fullName>
                <label>Oct-Dec 十月至十二月</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>