force-app/main/default/objects/Food_Production_Submission__c/fields/Sales_of_Produce__c.field-meta.xml
<CustomField>
    <fullName>Sales_of_Produce__c</fullName>
    <label>Sales of Produce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>