force-app/main/default/objects/Food_Production_Submission__c/fields/Year_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Sale__c</fullName>
    <inlineHelpText>Year of Sale in YYYY/DD</inlineHelpText>
    <label>Year of Sale (销售年份)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>