force-app/main/default/objects/Food_Production_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Farm_Plot_Number__c</columns>
    <columns>Farm_Name__c</columns>
    <columns>Species_of_Fish__c</columns>
    <columns>NAME</columns>
    <columns>Reporting_Period__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Status__c</columns>
    <columns>Attention_Details__c</columns>
    <columns>Require_Attention__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>