force-app/main/default/objects/Food_Production_Submission__c/listViews/Submissions_Require_Review.listView-meta.xml
<ListView>
    <fullName>Submissions_Require_Review</fullName>
    <columns>NAME</columns>
    <columns>Farm_Plot_Number__c</columns>
    <columns>Farm_Name__c</columns>
    <columns>Year_of_Sale__c</columns>
    <columns>Sale_Period__c</columns>
    <columns>Status__c</columns>
    <columns>Attention_Details__c</columns>
    <columns>Require_Attention__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attention_Details__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Submissions Require Review</label>
</ListView>