force-app/main/default/objects/Food_Production_Submission__c/listViews/This_Year_Data.listView-meta.xml
<ListView>
    <fullName>This_Year_Data</fullName>
    <columns>NAME</columns>
    <columns>Farm_Plot_Number__c</columns>
    <columns>Farm_Name__c</columns>
    <columns>Sale_Period__c</columns>
    <columns>Year_of_Sale__c</columns>
    <columns>Reporting_Period__c</columns>
    <columns>Status__c</columns>
    <columns>Attention_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year_of_Sale__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <label>This Year Data</label>
</ListView>